--- a/templates/base.html
+++ b/templates/base.html
@@ -5,15 +5,16 @@
     <meta charset="utf-8"/>
     <!-- Ensures proper rendering and touch-zooming for all devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
-    
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}"/>
+
     <!-- Favicon -->
     <!-- <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon"/> -->
 
     <!-- Javascript -->
-    
+
     <!-- Change the title of the page depending on what's being displayed -->
     <title>
       {% block c_title %}
@@ -21,11 +22,11 @@
       {% endblock %}
     </title>
   </head>
-  
+
   <body>
     <!-- Navbar - Consistent across all pages-->
     <nav class="navbar">
-      abc
+      navbar!
     </nav>
     <!-- Actual Page Related-->
     <div class="header">
@@ -40,7 +41,10 @@
     <!-- Footer - Consistent across all pages-->
     <footer class="footer">
       <hr>
-      asdf
+      <p class="footer_text">
+        Copyright Σector 2018 <br />
+        Produced by Σector: Kinshan Khan, Ryan Siu, James Smith, & Jake Zaia
+      </p>
     </footer>
   </body>
 </html>
