Add a table and ui for visualization page

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,8 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}"/>
-
+    {% block links_or_scripts %}
+    {% endblock %}
   </head>
 
   <body>
