--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,8 @@
 nav {
     background-color: #ffd700; !important
 }
+
 footer {
-    background-color: #efefef; !important
+    background-color: #efefef;
+    text-align: center; 
 }
