--- a/templates/base.html
+++ b/templates/base.html
@@ -37,21 +37,25 @@
 	  <a class="navbar-brand" href="/">
 	    <img src="{{ url_for('static', filename='img/sector_transparent.png') }}" width="75" height="40" class="d-inline-block align-top" alt="">
 	  </a>
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('root') }}">Home</a>
+          </li>
+	  <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('about') }}">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/visualization">Visualization</a>
+            <a class="nav-link" href="{{ url_for('visualization') }}">Visualization</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-	  <!-- button help https://getbootstrap.com/docs/4.0/components/buttons/ -->
-          <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-        </form>
+
+	<!-- Commented for demo purposes. Also unsure if we want the snippets idea -->
+	<!-- button help https://getbootstrap.com/docs/4.0/components/buttons/ -->
+	<!--
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+            </form>
+	    -->
       </div>
     </nav>
 
@@ -69,7 +73,11 @@
     <footer class="fixed-bottom">
       <hr>
       <p class="footer_text">
-        Copyright Σector 2018 <br />
+        Σector &copy;
+	<span id="copyright">
+          <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+	</span>
+	<br />
         Produced by Σector: Kinshan Khan, Ryan Siu, James Smith, & Jake Zaia
       </p>
     </footer>
