--- a/templates/home.html
+++ b/templates/home.html
@@ -9,5 +9,13 @@ jkl;
 {% endblock %}
 
 {% block content %}
-qwerty
+<div class="radio">
+  <label><input type="radio" name="optradio" value="the world's top 10 most populous countries">Populated Countries</label>
+</div>
+<div class="radio disabled">
+  <label><input type="radio" name="optradio" value="Europe's top 10 most popular car models" disabled>Popular Car Models in Europe</label>
+</div>
+<div class="radio disabled">
+  <label><input type="radio" name="optradio" value="the world's top 10 popular songs... in 2000" disabled>Popular Songs</label>
+</div> 
 {% endblock %}
