Begin work on merging Ryan's and Jake's work, create pie chart and transition when correct answer is inputted

--- a/static/css/visualization.css
+++ b/static/css/visualization.css
@@ -20,3 +20,12 @@
     border-left: solid orange 1px;;
     width: 90%;
 }
+
+.arc text {
+    font: 10px sans-serif;
+    text-anchor: middle;
+}
+
+.arc path {
+    stroke: #fff;
+}
