Add game functionality

--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -17,6 +17,9 @@ Sector
 <div class="row">
   <div class="col-sm">
     <br>
+    <h3>Time Remaining: <span id="time">{{ time }}</span></h3>
+    <h3>Your Score: <span id="score">0</span></h3>
+    <br>
     <label for="guess">Your Guess: </label>
     <input  id="guess" type="text" placeholder="Type your answer here">
     <br /> <br />
