--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -3,6 +3,7 @@
 {% block links_or_scripts %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/visualization.css') }}"/>
 <script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="{{ url_for('static', filename='js/d3-tip.js') }}"></script>
 {% endblock %}
 
 {% block c_title %}
