Comment out dependencies script

--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -3,11 +3,10 @@
 {% block links_or_scripts %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/visualization.css') }}"/>
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<!--
+
 <link href="{{ url_for('static', filename='css/d3.geomap.css') }}" rel="stylesheet">
-<script src="{{ url_for('static', filename='js/d3.geomap.dependencies.min.js') }}"></script>
+<!--<script src="{{ url_for('static', filename='js/d3.geomap.dependencies.min.js') }}"></script>-->
 <script src="{{ url_for('static', filename='js/d3.geomap.min.js') }}"></script>
--->
 
 {% endblock %}
 
