got the swapping working because javascript and d3 are dumb

--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -58,7 +58,7 @@ Sector
       <div class="radio">
         <label><input type="radio" selection="Pie Chart" class="charts" name="graphs" checked>Pie Chart</label>
         <label><input type="radio" selection="Heat Map" class = "charts" name="graphs">Heat Map</label>
-        <label><input type="radio" class = "charts" name="graphs">Bar Graph</label>
+        <label><input type="radio" selection="Bar Graph" class = "charts" name="graphs">Bar Graph</label>
       </div>
     </center>
   </div>
