--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@ Home
 
 {% block content %}
 <div class="radio">
-  <label><input type="radio" name="optradio" value="the world's top 10 most populous countries">Populated Countries</label>
+  <label><input type="radio" name="optradio" value="the world's top 10 most populous countries" checked>Populated Countries</label>
 </div>
 <div class="radio disabled">
   <label><input type="radio" name="optradio" value="Europe's top 10 most popular car models" disabled>Popular Car Models in Europe</label>
