--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,8 @@
 
     <!-- Javascript -->
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-
+    <script language="JavaScript"  src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
 
     <!-- Change the title of the page depending on what's being displayed -->
     <title>
@@ -52,13 +53,60 @@
 
 	<!-- Commented for demo purposes. Also unsure if we want the snippets idea -->
 	<!-- button help https://getbootstrap.com/docs/4.0/components/buttons/ -->
-        <form class="form-inline my-2 my-lg-0" method="POST" action="/searchjs">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="searchtext">
+        <!--<form class="form-inline my-2 my-lg-0" method="POST" action="/searchjs">-->
+	<form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" id="choice" type="search" placeholder="Search" aria-label="Search" name="searchtext">
           <button class="btn btn-outline-info my-2 my-sm-0" id="search_button" type="submit">Search</button>
         </form>
       </div>
     </nav>
 
+    <script>
+      $("button").click(function(e) {
+      //e.preventDefault();
+      
+      var res = document.getElementById("choice").value;
+      console.log(res);
+
+      var results = [];
+      
+      d3.csv("../../static/data/WorldPopulation.csv", function(d) {
+      var country = d["answer"];
+      var code = d["Country Code"];
+      
+      //check if contained
+      var resl = res.toLowerCase();
+      var countryl = country.toLowerCase();
+      var codel = country.toLowerCase();
+      
+      if(countryl.includes(resl) || codel.includes(resl)){
+      var temp = [country, code, d["value"]];
+      results.push(temp);
+      //console.log(country);
+      //console.log(code);
+      }
+      
+      return d;
+      }, function(error, data) {
+      if (error) throw error;
+      });
+      
+      //console.log(results);
+      var alp = ["friendddsss", "hiiiiiiiiiiiiiii"];
+      $.ajax({
+      url: "{{ url_for('searchjs') }}",
+      data: {'queryy': document.getElementById("choice").value, 'data': alp},
+      type: 'POST',
+      success: function(response) {
+      console.log('good');
+      },
+      error: function(error) {
+      console.log('bad');
+      }
+      });
+      
+      });
+    </script>
     <!-- Actual Page Related-->
     <div class="container">
       <div class="header">
@@ -78,8 +126,8 @@
 	<span id="copyright">
           <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
 	</span>
-	<br />
-        Produced by Σector: Kinshan Khan, Ryan Siu, James Smith, & Jake Zaia
+	<!--<br />
+            Produced by Σector: Kinshan Khan, Ryan Siu, James Smith, & Jake Zaia-->
       </p>
     </footer>
 
