--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('visualization') }}">Visualization</a>
           </li>
+          <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('quiz') }}">Quiz</a>
+            </li>
         </ul>
 
 	<!-- Commented for demo purposes. Also unsure if we want the snippets idea -->
