--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -32,7 +32,9 @@ Sector
           </div>
         </div>
         <div id="map"></div>
-        <div id="graph"></div>
+        <div id="graph">
+          <svg id="barg" width="450" height="450"></svg>
+        </div>
       </div>
     </center>
   </div>
