to infinity and beyond! slices show infinity percentage?

--- a/templates/home.html
+++ b/templates/home.html
@@ -78,9 +78,8 @@ Home
       <br>
       <br>
       <br>
-      <center>
-        <button type="button" class="btn btn-warning" value="2">Cars</button>
-      </center>
+        <button type="button" class="btn btn-warning" value="2" style="float: left;">Male</button>
+	<button type="button" class="btn btn-warning" value="3" style="float: right;">Female</button>
     </div>
     <div class="col-sm-4" style="background-color:#FFD700;">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
@@ -88,7 +87,7 @@ Home
       <br>
       <br>
       <center>
-        <button type="button" class="btn btn-info" value="3">Songs</button>
+        <button type="button" class="btn btn-info" value="4">Songs</button>
       </center>
     </div>
   </div>
