--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@ Home
 {% block content %}
 <div class="container">
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at tristique nisi. Proin id porta massa. Morbi egestas vel lorem ut efficitur. Praesent finibus vel enim accumsan fermentum. Proin et eleifend diam. Maecenas id consequat purus, sodales lacinia magna. Cras vel est vitae mauris ullamcorper faucibus. Morbi a sem a augue blandit varius ut sed lacus. Integer aliquam eu enim a porta. Duis consectetur dui iaculis massa sagittis ornare. Pellentesque tincidunt odio et nisi vulputate, nec dignissim ex tempus.</p>
+    Select one of the following datasets to be quizzed on, a time limit, and the number of items. You will be presented with a quiz where you must guess the top entires in that dataset. As you continue through, you will see the graphs come to life.
   <div class="row">
     <div class="col-sm-5" style="background-color:#17A2B8;">
       Choose Your Time (seconds)
@@ -65,29 +65,30 @@ Home
   <br>
   <div class="row">
     <div class="col-sm-4" style="background-color:#FFD700;">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      <br>
+      <center>World population by country according to a 2016 census</center>
       <br>
       <center>
-        <button type="button" class="btn btn-info" value="1">Countries</button>
+        <button type="button" class="btn btn-info" value="1">World Population</button>
       </center>
     </div>
     <div class="col-sm-4" style="background-color:#17A2B8;">
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto.
-      <br>
-      <br>
+      <center>Most popular male and female baby names in 2008</center>
       <br>
         <button type="button" class="btn btn-warning" value="2" style="float: left;">Male</button>
 	<button type="button" class="btn btn-warning" value="3" style="float: right;">Female</button>
     </div>
     <div class="col-sm-4" style="background-color:#FFD700;">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      <br>
+      <center>The most dancible songs of 2017 according to Spotify</center>
       <br>
       <center>
         <button type="button" class="btn btn-info" value="4">Songs</button>
+      </center>
+    </div>
+    <div class="col-sm-4" style="background-color:#17A2B8;">
+      <center>Change in world population by country from 1960 to 2016</center>
+      <br>
+      <center>
+        <button type="button" class="btn btn-warning" value="4">Change in Population</button>
       </center>
     </div>
   </div>
