rolling with this home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -70,6 +70,7 @@ Home
 	<center>
           <button type="button" class="btn btn-info" value="1">World Population</button>
 	</center>
+	<hr/>
       </div>
       <div class="col-sm-4" style="background-color:#17A2B8;">
 	<center>Most popular male and female baby names in 2008</center>
@@ -83,14 +84,14 @@ Home
 	<center>
           <button type="button" class="btn btn-info" value="4">Songs</button>
 	</center>
+	<hr/>
       </div>
-      <div class="col-sm-4" style="background-color:white;">
-      </div>
-      <div class="col-sm-4" style="background-color:#17A2B8;">
+      <div class="col-sm-12" style="background-color:#FFD700;">
+	
 	<center>Change in world population by country from 1960 to 2016</center>
 	<br>
 	<center>
-          <button type="button" class="btn btn-warning" value="5">Change in Population</button>
+          <button type="button" class="btn btn-info" value="5">Change in Population</button>
 	</center>
       </div>
     </div>
