--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -57,8 +57,8 @@ Sector
       </div>
       <div class="radio">
         <label><input type="radio" selection="Pie Chart" class="charts" name="graphs" checked>Pie Chart</label>
-        <label><input type="radio" selection="Heat Map" class = "charts" name="graphs">Heat Map</label>
-        <label><input type="radio" selection="Bar Graph" class = "charts" name="graphs">Bar Graph</label>
+        <label><input type="radio" selection="Heat Map" class = "charts" name="graphs" disabled>Heat Map</label>
+        <label><input type="radio" selection="Bar Graph" class = "charts" name="graphs" disabled>Bar Graph</label>
       </div>
     </center>
   </div>
